--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,2 +1,4 @@
-<header-view name="Customer"></header-view>
-<search-view class="search"></search-view>
+<div>
+    <header-view name="Customer"></header-view>
+    <search-view></search-view>
+</div>
