--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,4 +1,4 @@
 <div>
     <header-view name="Customer"></header-view>
-    <search-view></search-view>
+    <search-view filePath="customer-search-fields"></search-view>
 </div>
