--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -8,16 +8,25 @@
         <form [formGroup]="searchForm" (ngSubmit)="search()">
             <mat-form-field *ngFor="let searchField of searchFields" class="medium" appearance="outline">
                 <mat-label>{{ searchField.name }}</mat-label>
-                <input *ngIf="searchField.type == 'text'" type="{{ searchField.type }}" matInput formControlName="{{ searchField.formControlName }}"
-                    placeholder="{{ searchField.placeholder }}" [required]="searchField.required">
-                <mat-select *ngIf="searchField.type == 'list'" formControlName="{{ searchField.formControlName }}" multiple>
-                    <mat-option *ngFor="let category of categoryList" [value]="category">{{category}}</mat-option>
+                <input *ngIf="searchField.type == 'text'" type="{{ searchField.type }}" matInput
+                    formControlName="{{ searchField.formControlName }}" placeholder="{{ searchField.placeholder }}"
+                    [required]="searchField.required">
+                <mat-select *ngIf="searchField.type == 'list'" formControlName="{{ searchField.formControlName }}"
+                    multiple>
+                    <mat-option *ngFor="let item of searchField.list" [value]="item.key">{{item.value}}</mat-option>
                 </mat-select>
+                <div *ngIf="searchField.type == 'date'">
+                    <mat-date-range-input [rangePicker]="campaignOnePicker">
+                        <input matStartDate placeholder="Start date" formControlName="start">
+                        <input matEndDate placeholder="End date" formControlName="end">
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matIconSuffix [for]="campaignOnePicker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #campaignOnePicker></mat-date-range-picker>
+                </div>
             </mat-form-field>
             <div class="buttons">
                 <button class="button" type="reset" mat-raised-button>Clear</button>
                 <button class="button" type="submit" mat-raised-button color="primary">Search</button>
-                <button class="button" type="button" mat-raised-button color="primary">Fetch From OOS</button>
             </div>
         </form>
     </mat-expansion-panel>
