--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,6 @@
 @import "@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~ag-grid-community/styles//ag-grid.css";
+@import "~ag-grid-community/styles//ag-theme-alpine.css";
 
 body { 
     font-family: Roboto, Arial, sans-serif;
