--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,6 +1,18 @@
 <grid-action></grid-action>
-<ag-grid-angular class="ag-theme-alpine" [columnDefs]="columnDefs" [autoGroupColumnDef]="autoGroupColumnDef"
-    [defaultColDef]="defaultColDef" [suppressRowClickSelection]="true" [groupSelectsChildren]="true"
-    [rowSelection]="rowSelection" [rowGroupPanelShow]="rowGroupPanelShow" [pivotPanelShow]="pivotPanelShow"
-    [pagination]="true" [rowData]="rowData" (gridReady)="onGridReady($event)">
-</ag-grid-angular>
+<ag-grid-angular
+    style="height: 600px;"
+    class="ag-theme-alpine"
+    [columnDefs]="columnDefs"
+    [autoGroupColumnDef]="autoGroupColumnDef"
+    [defaultColDef]="defaultColDef"
+    [suppressRowClickSelection]="true"
+    [groupSelectsChildren]="true"
+    [rowSelection]="rowSelection"
+    [rowGroupPanelShow]="rowGroupPanelShow"
+    [pivotPanelShow]="pivotPanelShow"
+    [paginationAutoPageSize]="true"
+    [pagination]="true"
+    [rowData]="data"
+    [animateRows]="true"
+    (gridReady)="onGridReady($event)"
+  ></ag-grid-angular>
