--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,4 +1,3 @@
-@import "../../styles.css";
 
 mat-form-field {
     padding-right: 20px !important;
@@ -16,3 +15,11 @@ mat-form-field {
 .panel-title {
     font-weight: bold;
 }
+
+.short {
+    width: 150px;
+  }
+
+  .medium {
+    width: 325px;
+  }
