--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,7 +1,7 @@
 @import "../base/animations";
 @import "../abstract/variables";
 .btn {
-
+    border: 0.1rem solid $gray_color_2;
     &,
     &:visited,
     &:link {
@@ -11,20 +11,16 @@
         display: inline-block;
         transition: all .2s;
         border-radius: 0.75rem;
-
         border: none;
         cursor: pointer;
     }
 
     &:hover {
         transform: translateY(-0.3rem);
-        box-shadow: 0rem 0.1rem 0.1rem rgba($black_color,0.90);
     }
 
     &:active {
         transform: translateY(-0.06rem);
-        box-shadow: 0rem 0.1rem 0.1rem rgba($black_color,0.90);
-
     }
 
     &.whiteBtn {
