--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -26,7 +26,7 @@
             </mat-form-field>
             <div class="buttons">
                 <button class="btn whiteBtn" type="reset" mat-raised-button>Clear</button>
-                <button class="btn primaryBtn" type="submit" mat-raised-button color="primary">Search</button>
+                <button class="btn primaryBtn" type="submit" mat-raised-button>Search</button>
             </div>
         </form>
     </mat-expansion-panel>
