--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,11 +5,11 @@ body {
     line-height: $line_height;
     font-weight: $font_weight;
     font-family:$font_family !important;
-    -ms-overflow-style: none;
-    scrollbar-width:none;
+    -ms-overflow-style: none !important;
+    scrollbar-width:none !important;
     
     &::-webkit-scrollbar {
-      display: none;
+      display: none !important;
     }
 }
 
