--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,7 +1,4 @@
-@import "../../scss/components/from";
-@import "../../scss/components/button";
-@import "../../scss/abstract/variables";
-
+@import "../../styles.scss";
 
 .panel-title {
     font-weight: bold;
