--- a/src/scss/base/_utilities.scss
+++ b/src/scss/base/_utilities.scss
@@ -43,3 +43,11 @@ a, a:focus, a:hover {
 .red-text {
     color: $red;
 }
+
+.orange-text {
+    color: $orange_color;
+}
+
+.bold {
+    font-weight: 600;
+}
