--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,7 +8,7 @@
   background-color: $primary_color;
   color: $white_color;
   font-weight: 600;
-  font-size: $default-font-size;
+  font-size: $font-size;
 
   img {
     margin: 0 0.4rem;
