--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -2,9 +2,9 @@
 <div class="example-wrapper">
   <ag-grid-angular style="height: 600px;" class="ag-theme-alpine" [columnDefs]="columnDefs"
     [autoGroupColumnDef]="autoGroupColumnDef" [defaultColDef]="defaultColDef" [suppressRowClickSelection]="true"
-    [groupSelectsChildren]="true" [rowSelection]="rowSelection" [rowGroupPanelShow]="rowGroupPanelShow"
-    [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage" [pagination]="true" [rowData]="data"
-    [animateRows]="true" (gridReady)="onGridReady($event)"></ag-grid-angular>
+    [overlayNoRowsTemplate]="noRowsTemplateValue" [groupSelectsChildren]="true" [rowSelection]="rowSelection"
+    [rowGroupPanelShow]="rowGroupPanelShow" [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage"
+    [pagination]="true" [rowData]="data" [animateRows]="true" (gridReady)="onGridReady($event)"></ag-grid-angular>
   <div class="example-header">
     Page Size:
     <select (change)="onPageSizeChanged()" id="page-size">
