--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -7,6 +7,7 @@ $primary_color_lightest: #eaf0f4;
 
 $red:#ff0000;
 $success_color: #008000;
+$orange_color:#f0a70a;
 
 $font_size : 16px;
 $default-font-size: 0.9rem;
