--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -71,3 +71,7 @@
         transform: translateY(0);
     }
 }
+
+.mat-flat-button.mat-primary, .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
+    background-color: $primary_color;
+}
