--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,7 +1,7 @@
 <grid-action></grid-action>
 <div class="example-wrapper">
   <ag-grid-angular style="height: 600px;" class="ag-theme-alpine" [columnDefs]="columnDefs"
-    [autoGroupColumnDef]="autoGroupColumnDef" [defaultColDef]="defaultColDef" [suppressRowClickSelection]="true"
+    [autoGroupColumnDef]="autoGroupColumnDef" [suppressRowClickSelection]="true"
     [overlayNoRowsTemplate]="noRowsTemplateValue" [groupSelectsChildren]="true" [rowSelection]="rowSelection"
     [rowGroupPanelShow]="rowGroupPanelShow" [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage"
     [pagination]="true" [rowData]="data" [animateRows]="true" (gridReady)="onGridReady($event)"></ag-grid-angular>
