--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,4 @@
 @import "scss/components/dialog";
 @import "scss/components/progressBar";
 @import "scss/components/table";
+@import "scss/components/snackbar";
