--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,9 +1,16 @@
 
 $primary_color_darkest: #1b548a;
-$primary_color_darker: #316fa9;
+$primary_color_darker: #4b7dac;
 $primary_color: #4A83B7;
-$primary_color_lighter: #79a8d3;
+$primary_color_lighter: #a8d0f7;
 $primary_color_lightest: #eaf0f4;
+
+
+// $primary_color_darkest: #6f0653;
+// $primary_color_darker: #bc1996;
+// $primary_color: #4a70b7;
+// $primary_color_lighter: #f98cdcae;
+// $primary_color_lightest: #aebaf4;
 
 $red:#ff0000;
 $success_color: #008000;
