--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -18,3 +18,21 @@ body {
     padding: 0rem;
     box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $primary_color_darker;
+  border-radius: 0.3rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $primary_color_darkest;
+}
