--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,11 +1,12 @@
 <grid-action></grid-action>
-<div class="example-wrapper">
+<div>
   <ag-grid-angular style="height: 600px;" class="ag-theme-alpine" [columnDefs]="columnDefs"
-    [autoGroupColumnDef]="autoGroupColumnDef" [suppressRowClickSelection]="true"
+  [defaultColDef]="defaultColDef"
+    [suppressRowClickSelection]="true"
     [overlayNoRowsTemplate]="noRowsTemplateValue" [groupSelectsChildren]="true" [rowSelection]="rowSelection"
     [rowGroupPanelShow]="rowGroupPanelShow" [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage"
-    [pagination]="true" [rowData]="data" [animateRows]="true" (gridReady)="onGridReady($event)"></ag-grid-angular>
-  <div class="example-header">
+    [pagination]="true" [rowData]="data" [animateRows]="true" (gridReady)="onGridReady($event)" groupDisplayType="groupRows"></ag-grid-angular>
+  <div>
     Page Size:
     <select (change)="onPageSizeChanged()" id="page-size">
       <option value="10" selected="">10</option>
