--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,4 @@
 @import "scss/components/progressBar";
 @import "scss/components/table";
 @import "scss/components/snackbar";
+@import "scss/base/toolbar";
