--- a/src/app/customer/AccountNumberCell/accountNumberCell.component.html
+++ b/src/app/customer/AccountNumberCell/accountNumberCell.component.html
@@ -24,12 +24,7 @@
                     <span>{{item.text}}</span>
                     <mat-icon>{{ item.icon }}</mat-icon>
                 </span>
-                <app-quick-menu-item #menu [items]="item.children"></app-quick-menu-item>
-            </span>
-
-            <span *ngIf="!item.children || item.children.length === 0" class="quick-action">
-                <span>{{item.text}}</span>
-                <mat-icon>{{ item.icon }}</mat-icon>
+                <app-quick-menu-item #menu [items]="item.children" [data]="value"></app-quick-menu-item>
             </span>
         </span>
     </div>
