--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -14,7 +14,7 @@ $primary_color_lightest: #eaf0f4;
 
 $red:#ff0000;
 $success_color: #008000;
-$orange_color:#f0a70a;
+$orange_color:#ff7b00;
 
 $font_size : 16px;
 $default-font-size: 0.9rem;
