--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,4 @@
 @import "scss/components/table";
 @import "scss/components/snackbar";
 @import "scss/base/toolbar";
+@import "scss/components/pagination";
