--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,17 +1,18 @@
 <grid-action></grid-action>
-<div>
+<div class="pagination-panel">
+  <mat-paginator [length]="resultSize"
+  [pageSize]="rowsPerPage"
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  pageIndex="0"
+  (page)="onPageSizeChanged($event)"></mat-paginator>
+  <div>
+    Grid configuration actions
+  </div>
+</div>
   <ag-grid-angular style="height: 600px;" class="ag-theme-alpine" [columnDefs]="columnDefs"
   [defaultColDef]="defaultColDef"
     [suppressRowClickSelection]="true"
     [overlayNoRowsTemplate]="noRowsTemplateValue" [groupSelectsChildren]="true" [rowSelection]="rowSelection"
     [rowGroupPanelShow]="rowGroupPanelShow" [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage"
-    [pagination]="true" [rowData]="data" [animateRows]="true" (gridReady)="onGridReady($event)" groupDisplayType="groupRows"></ag-grid-angular>
-  <div>
-    Page Size:
-    <select (change)="onPageSizeChanged()" id="page-size">
-      <option value="10" selected="">10</option>
-      <option value="100">100</option>
-      <option value="500">500</option>
-      <option value="1000">1000</option>
-    </select>
-  </div>
+    [rowData]="data" [animateRows]="true" (gridReady)="onGridReady($event)" groupDisplayType="groupRows"></ag-grid-angular>
+
