--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -1,18 +1,13 @@
 <grid-action></grid-action>
 <div class="pagination-panel">
-  <mat-paginator [length]="resultSize"
-  [pageSize]="rowsPerPage"
-  [pageSizeOptions]="[5, 10, 25, 100]"
-  pageIndex="0"
-  (page)="onPageSizeChanged($event)"></mat-paginator>
+  <mat-paginator [length]="resultSize" [pageSize]="rowsPerPage" [pageSizeOptions]="[5, 10, 25, 100]" pageIndex="0"
+    (page)="onPageSizeChanged($event)"></mat-paginator>
   <div>
     Grid configuration actions
   </div>
 </div>
-  <ag-grid-angular style="height: 600px;" class="ag-theme-alpine" [columnDefs]="columnDefs"
-  [defaultColDef]="defaultColDef"
-    [suppressRowClickSelection]="true"
-    [overlayNoRowsTemplate]="noRowsTemplateValue" [groupSelectsChildren]="true" [rowSelection]="rowSelection"
-    [rowGroupPanelShow]="rowGroupPanelShow" [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage"
-    [rowData]="data" [animateRows]="true" (gridReady)="onGridReady($event)" groupDisplayType="groupRows"></ag-grid-angular>
-
+<ag-grid-angular style="height: 600px;" class="ag-theme-alpine" [columnDefs]="columnDefs"
+  [defaultColDef]="defaultColDef" [suppressRowClickSelection]="true" [overlayNoRowsTemplate]="noRowsTemplateValue"
+  [groupSelectsChildren]="true" [rowSelection]="rowSelection" [rowGroupPanelShow]="rowGroupPanelShow"
+  [pivotPanelShow]="pivotPanelShow" [paginationPageSize]="rowsPerPage" [rowData]="data" [animateRows]="true"
+  (gridReady)="onGridReady($event)" groupDisplayType="groupRows"></ag-grid-angular>
