--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,9 +1,22 @@
+@import "../abstract/variables";
+
 .pagination-panel {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-::ng-deep .mat-paginator, .mat-paginator-page-size .mat-select-trigge{
-    color: rgba(0, 0, 0, 0.962);
+::ng-deep .mat-paginator-range-label , ::ng-deep .mat-paginator-page-size-label{
+    color: $primary_color_darkest;
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+::ng-deep .mat-paginator-icon {
+    color: $primary_color_darkest;
+    font-weight: 700;
+}
+
+::ng-deep .mat-icon-button.mat-button-disabled.mat-button-disabled .mat-paginator-icon {
+    color: rgba($primary_color_darkest,0.5);
 }
