--- a/src/scss/components/_from.scss
+++ b/src/scss/components/_from.scss
@@ -54,9 +54,39 @@
   background-color: $primary_color;
 }
 
-::ng-deep .mat-calendar-body-selected {
-  background-color: $primary_color_darkest;
-  color: $white-color;
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
+  padding: 0.2em 0.2em 0 0.2em;
+}
+
+// radio
+::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle, .mat-radio-outer-circle{
+  border-color: $primary_color;
+}
+
+::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
+  background-color: $primary_color;
+}
+
+// menu
+::ng-deep .mat-select-arrow , ::ng-deep .mat-select-value, ::ng-deep .mat-option-text {
+  color: $primary_color_darkest;
+  font-weight: 600;
+}
+
+::ng-deep .mat-menu-item {
+  color:$primary_color_darkest
+}
+
+
+::ng-deep .mat-icon-button {
+  color: $primary_color;
+}
+
+//calendar
+
+::ng-deep .mat-calendar-body-cell-content {
+  color: $primary_color;
+  border-color: transparent;
 }
 
 ::ng-deep
@@ -74,6 +104,11 @@
   > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected):not(
     .mat-calendar-body-comparison-identical
   ) {
+  background-color: $primary_color_lightest;
+  color: $primary_color_darkest !important;
+}
+
+::ng-deep .mat-calendar-body-selected {
   background-color: $primary_color_darkest;
   color: $white-color;
 }
@@ -81,112 +116,3 @@
 ::ng-deep .mat-calendar-body-in-range::before {
     background-color: rgba($primary_color_lighter,0.6);
 }
-
-::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
-  padding: 0.2em 0.2em 0 0.2em;
-}
-
-::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle, .mat-radio-outer-circle{
-  border-color: $primary_color;
-}
-
-::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle, .mat-radio-button.mat-accent .mat-radio-ripple .mat-ripple-element:not(.mat-radio-persistent-ripple), .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-persistent-ripple, .mat-radio-button.mat-accent:active .mat-radio-persistent-ripple {
-  background-color: $primary_color;
-}
-
-// .form {
-//     &__group:not(:last-child) {
-//         margin-bottom: 2rem;
-//     }
-
-//     &__input {
-//         font-size: 1rem;
-//         font-family: inherit;
-//         color: inherit;
-//         padding: 1rem 1rem;
-//         border-radius: 2px;
-//         background-color: rbga($white-color, .5);
-//         border: none;
-//         border-bottom: 3px solid transparent;
-//         width: 90%;
-//         display: block;
-//         transition: all .3s;
-//         color: $black_color;
-
-//         &:focus {
-//             outline: none;
-//             box-shadow: 0 0.5rem 1rem rgba($primary_color, .1);
-//             border-bottom: 3px solid $primary_color;
-//             font-weight: 1000;
-//         }
-
-//         &:focus:invalid {
-//             border-bottom: 3px solid $red;
-//         }
-
-//         &::-webkit-input-placeholder {
-//             color: $gray_color_0;
-//         }
-//     }
-
-//     &__label {
-//         font-size: 0.8rem;
-//         font-weight: 700;
-//         margin-left: 0.5rem;
-//         margin-top: .7rem;
-//         display: block;
-//         transition: all .3s;
-//     }
-
-//     &__input:placeholder-shown + &__label {
-//         opacity: 0;
-//         visibility: hidden;
-//         transform: translateY(-6rem);
-//     }
-
-//     &__radio-group {
-//         width: 40%;
-//         display: inline-block;
-//     }
-
-//     &__radio-input {
-//         display: none;
-//     }
-
-//     &__radio-label {
-//         font-size: $default-font-size;
-//         cursor: pointer;
-//         position: relative;
-//         padding-left: 2rem;
-//     }
-
-//     &__radio-button {
-//         height: 2rem;
-//         width: 2rem;
-//         border: 5px solid $primary_color;
-//         border-radius: 50%;
-//         display: inline-block;
-//         position: absolute;
-//         left: 0;
-//         top: -.4rem;
-
-//         &::after {
-//             content: "";
-//             display: block;
-//             height: 1.3rem;
-//             width: 1.3rem;
-//             border-radius: 50%;
-//             position: absolute;
-//             top: 50%;
-//             left: 50%;
-//             transform: translate(-50%, -50%);
-//             background-color: $primary_color;
-//             opacity: 0;
-//             transition: opacity .2s;
-//         }
-//     }
-
-//     &__radio-input:checked ~ &__radio-label &__radio-button::after {
-//         opacity: 1;
-//     }
-// }
