--- a/src/scss/components/_progressBar.scss
+++ b/src/scss/components/_progressBar.scss
@@ -5,11 +5,11 @@
 }
 
 ::ng-deep .mat-progress-bar-fill::after {
-    background-color: $primary_color_lighter;
+    background-color: $primary_color;
 }
 
 ::ng-deep .mat-progress-bar-buffer {
-    background: $primary_color_lightest;
+    background: $primary_color_lighter;
 }
 
 ::ng-deep .mat-progress-bar {
