--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="height: auto;">
     <header-view name="Customer"></header-view>
     <search-view [searchFields]="searchFields" [searchForm]="searchForm" (onSearch)="search()"></search-view>
     <grid [data]="data" [columnDefs]="columnDefs" [rowsPerPage]="rowsPerPage" [resultSize]="resultSize" [noRowsTemplate]="noRowsTemplate" (pageChange)="onPageChange($event)"></grid>
