--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,8 @@
 <div class="header">
     <div class="view_name"> {{ name }} </div>
-    <div class="settings"> <mat-icon>check_circle</mat-icon><span> Your settings has been completed <a class="general-link-inline" (click)="openDialog()">click here</a></span></div>
+    <div class="settings">
+        <span><mat-icon>check_circle</mat-icon></span>
+        <span> Your settings has been completed <a class="general-link-inline" (click)="openDialog()">click
+                here</a></span>
+    </div>
 </div>
