--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,7 +3,7 @@
       <!-- Handle branch node menu items -->
       <span *ngIf="child.children && child.children.length > 0">
         <button mat-menu-item [matMenuTriggerFor]="menu.childMenu">
-          <img *ngIf="child.displayIcon" [src]="child.displayIcon">
+          <img *ngIf="child.displayIcon" [src]="child.displayIcon" width="25">
           <span>{{child.displayName}}</span>
         </button>
         <app-menu-item #menu [items]="child.children"></app-menu-item>
@@ -11,7 +11,7 @@
       <!-- Handle leaf node menu items -->
       <span *ngIf="!child.children || child.children.length === 0">
         <button mat-menu-item [routerLink]="child.route">
-          <img *ngIf="child.displayIcon" [src]="child.displayIcon">
+          <img *ngIf="child.displayIcon" [src]="child.displayIcon" width="25">
           <span>{{child.displayName}}</span>
         </button>
       </span>
