--- a/src/scss/base/_toolbar.scss
+++ b/src/scss/base/_toolbar.scss
@@ -11,7 +11,7 @@
     font-size: $font-size;
   
     img {
-      margin: 0 0.4rem;
+      padding: 0 0.4rem;
     }
   
     .left-toolbar {
@@ -22,7 +22,7 @@
       .menu-item {
         padding: 0px;
         margin: 0px;
-        margin-left: 0.8rem;
+        padding-left: 0.8rem;
         cursor: pointer;
   
       }
@@ -36,11 +36,11 @@
       .menu-item {
         margin: 0px;
         padding: 0px;
-        margin-right: 0.2rem;
+        padding-right: 0.2rem;
         cursor: pointer;
   
         &:last-child {
-          margin-right: 0.5rem;
+          padding-right: 0.5rem;
         }
       }
     }
@@ -51,6 +51,6 @@
   }
   
   .content {
-    margin: 1rem;
+    padding: 1rem;
   }
   
