--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,9 +1,9 @@
 // blue
-// $primary_color_darkest: #1b548a;
-// $primary_color_darker: #4b7dac;
-// $primary_color: #4A83B7;
-// $primary_color_lighter: #a8d0f7;
-// $primary_color_lightest: #eaf0f4;
+$primary_color_darkest: #1b548a;
+$primary_color_darker: #4b7dac;
+$primary_color: #4A83B7;
+$primary_color_lighter: #a8d0f7;
+$primary_color_lightest: #eaf0f4;
 
 // yellow and green
 // $primary_color_darkest: #1c6103;
@@ -13,15 +13,15 @@
 // $primary_color_lightest: #cbffb8;
 
 // pink
-$primary_color_darkest: #7c1a48;
-$primary_color_darker: #d3075f;
-$primary_color: #b60e68;
-$primary_color_lighter: #fffacd;
-$primary_color_lightest: #ffe4c4;
+// $primary_color_darkest: #7c1a48;
+// $primary_color_darker: #d3075f;
+// $primary_color: #b60e68;
+// $primary_color_lighter: #fffacd;
+// $primary_color_lightest: #ffe4c4;
 
 $red: #ff3939;
-$success_color: #05db05;
-$orange_color: #ffc400;
+$success_color: #1b8325;
+$orange_color: #ff7800;
 
 $font_size: 12px;
 $default-font-size: 1rem;
